--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lit-protocol/auth-helpers": "^8.1.1",
+    "@lit-protocol/constants": "^8.0.8",
+    "@lit-protocol/encryption": "^7.3.1",
+    "@lit-protocol/lit-node-client": "^7.3.1",
+    "ethers": "^5.8.0",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
