--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@lit-protocol/lit-node-client": "^7.3.1",
     "@storacha/client": "^1.8.21",
     "@web3-storage/w3up-client": "^17.3.0",
+    "@openzeppelin/contracts": "^5.4.0",
     "ethers": "^5.8.0",
     "lucide-react": "^0.554.0",
     "multiformats": "^13.4.1",
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "solc": "^0.8.31"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
