--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,5 +1,8 @@
 {
   "name": "hardhat-project",
+  "dependencies": {
+      "@openzeppelin/contracts": "^5.4.0"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
     "hardhat": "^2.27.1"
