--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@lit-protocol/lit-node-client": "^7.3.1",
     "@openzeppelin/contracts": "^5.4.0",
     "@storacha/client": "^1.8.21",
+    "@tanstack/react-query": "^5.90.12",
     "@web3-storage/w3up-client": "^17.3.0",
-    "ethers": "^5.8.0",
+    "ethers": "^6.16.0",
     "lucide-react": "^0.554.0",
     "multiformats": "^13.4.1",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "solc": "^0.8.31"
+    "solc": "^0.8.31",
+    "viem": "^2.41.2",
+    "wagmi": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@typechain/ethers-v5": "^11.1.2",
+    "@typechain/ethers-v6": "^0.5.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
