--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,10 +1,13 @@
 {
   "name": "hardhat-project",
   "dependencies": {
-      "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.3"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@typechain/hardhat": "^9.1.0",
     "hardhat": "^2.27.1"
   }
 }
