--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lit-protocol/encryption": "^7.3.1",
     "@lit-protocol/lit-node-client": "^7.3.1",
     "@openzeppelin/contracts": "^5.4.0",
+    "@rainbow-me/rainbowkit": "^2.2.10",
     "@storacha/client": "^1.8.21",
     "@tanstack/react-query": "^5.90.12",
     "@web3-storage/w3up-client": "^17.3.0",
@@ -24,8 +25,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "solc": "^0.8.31",
-    "viem": "^2.38.0",
-    "wagmi": "^3.1.0"
+    "viem": "^2.38.1",
+    "wagmi": "^2.19.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
